fix: decreases margin
Fixes post/page pages when hero image/video overlaps sidebar content.

--- a/assets/scss/07-trumps/page-single.scss
+++ b/assets/scss/07-trumps/page-single.scss
@@ -75,8 +75,8 @@
         .wp-block-image,
         .wp-block-embed,
         .embed-youtube {
-            margin-right: -180px;
-            margin-left: -180px;
+            margin-right: -(map-get($spacers, 5) / 2);
+            margin-left: -(map-get($spacers, 5) / 2);
         }
     }
 }
